--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1460.0",
+    "bluebird": "^3.7.2",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "find-config": "^1.0.0",
+    "jsonwebtoken": "^9.0.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
